Implement environment resolution from PropertyResource